# coding_agent_mini

./: .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt  run-streamlit.ps1  run-streamlit.sh  run-web.ps1  run-web.sh  start.sh  streamlit_app.py
generated_project/: README.md  generated_project_runner.py
generated_project/build_a_login_system_with_jwt_auth_app/: app.py
generated_project/build_a_login_system_with_mvp_app/: app.py
generated_project/jwt_login_system_mvp_app/: app.py
generated_project/tests/: test_app.py
mini_dev_agent/: __init__.py  cli.py  debugger.py  executor.py  generator.py  models.py  orchestrator.py  planner.py  providers.py  structured_output.py  web.py
tests/: test_orchestrator.py  test_providers.py
