[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-dev-agent"
version = "0.1.0"
description = "A closed-loop autonomous coding assistant MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=2.30.0", "fastapi>=0.112.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]

[project.scripts]
mini-dev-agent = "mini_dev_agent.cli:main"
mini-dev-agent-web = "mini_dev_agent.web:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_dev_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
